# GlobalHack-IA-cracks

./: .gitignore  CONFIGURACION.md  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: scanner.py  sentinel.py  tools.py
backend/app/api/: agent_ws.py  incidents.py  policy.py  projects.py  scan_ws.py  webhook.py
backend/app/models/: database.py  incident.py  policy.py  project.py
backend/app/services/: postmortem.py
demo-target/: README.md  app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentStream.tsx  AgentToggle.tsx  NotificationCenter.tsx  StatusBadge.tsx
frontend/src/pages/: BusinessContext.tsx  Dashboard.tsx  Integrations.tsx  Metrics.tsx  PolicyConfig.tsx  Postmortems.tsx  Projects.tsx  Settings.tsx
